--- a/index.html
+++ b/index.html
@@ -6,109 +6,262 @@
 <title>Zyra Graphics</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
-body{background:#000;color:#fff;font-family:sans-serif;overflow-x:hidden}
 
-/* HERO */
-.hero{height:100vh;position:relative;overflow:hidden}
-.hero video{width:100%;height:100%;object-fit:cover;filter:brightness(.5)}
+/* ================= RESET ================= */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+
+body{
+  background:#000;
+  color:#fff;
+  font-family:Arial,Helvetica,sans-serif;
+  overflow-x:hidden;
+}
+
+/* ================= GLOBAL ================= */
+img,video{
+  max-width:100%;
+  display:block;
+}
+
+h1,h2{
+  font-weight:600;
+  letter-spacing:2px;
+}
+
+/* ================= HERO ================= */
+.hero{
+  position:relative;
+  height:100vh;
+  width:100%;
+  overflow:hidden;
+}
+
+.hero video{
+  position:absolute;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  filter:brightness(.45) saturate(1.2);
+  animation:heroZoom 20s infinite alternate ease-in-out;
+}
+
+@keyframes heroZoom{
+  from{transform:scale(1)}
+  to{transform:scale(1.15)}
+}
+
 .hero::after{
-content:"";position:absolute;inset:0;
-background:radial-gradient(circle at center,transparent,black 70%);
+  content:"";
+  position:absolute;
+  inset:0;
+  background:radial-gradient(circle at center, transparent 40%, #000 85%);
 }
+
+.hero::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:url("https://i.imgur.com/8Km9tLL.png");
+  opacity:.15;
+  mix-blend-mode:overlay;
+}
+
+/* ================= HERO TEXT ================= */
 .hero-text{
-position:absolute;top:50%;left:50%;
-transform:translate(-50%,-50%);
-text-align:center;
-animation:heroText 3s ease forwards
-}
-.hero-text h1{font-size:42px;letter-spacing:4px}
-.hero-text p{opacity:.7;margin-top:6px}
-
-@keyframes heroText{
-from{opacity:0;transform:translate(-50%,-40%)}
-to{opacity:1;transform:translate(-50%,-50%)}
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  text-align:center;
+  animation:textReveal 3s ease forwards;
 }
 
-/* SECTION */
-.section{padding:20px 10px}
-.section h2{text-align:center;margin:10px 0;font-size:20px}
+.hero-text h1{
+  font-size:42px;
+  margin-bottom:6px;
+}
 
-/* GRID */
-.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:8px}
-.card{overflow:hidden;border-radius:10px}
-.card img{width:100%;display:block;transition:.8s}
-.card img:hover{transform:scale(1.15);filter:brightness(1.2)}
+.hero-text p{
+  opacity:.7;
+  font-size:14px;
+}
 
-/* Lightbox */
+@keyframes textReveal{
+  from{opacity:0;transform:translate(-50%,-40%)}
+  to{opacity:1;transform:translate(-50%,-50%)}
+}
+
+/* ================= SECTIONS ================= */
+.section{
+  padding:18px 10px;
+}
+
+.section h2{
+  text-align:center;
+  margin-bottom:8px;
+  font-size:18px;
+  opacity:.85;
+}
+
+/* ================= GRID ================= */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:8px;
+}
+
+.card{
+  position:relative;
+  overflow:hidden;
+  border-radius:12px;
+}
+
+.card img{
+  transition:1s;
+  filter:brightness(.9);
+}
+
+.card:hover img{
+  transform:scale(1.2);
+  filter:brightness(1.3);
+}
+
+/* ================= SCROLL FADE ================= */
+.fade{
+  opacity:0;
+  transform:translateY(20px);
+  transition:1s;
+}
+
+.fade.show{
+  opacity:1;
+  transform:translateY(0);
+}
+
+/* ================= LIGHTBOX ================= */
 #lightbox{
-position:fixed;inset:0;background:rgba(0,0,0,.95);
-display:none;align-items:center;justify-content:center
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.96);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:99;
 }
-#lightbox img{max-width:95%;max-height:95%}
 
-/* Social */
-.social{position:fixed;right:10px;bottom:10px;display:flex;flex-direction:column;gap:8px}
+#lightbox img{
+  max-width:95%;
+  max-height:95%;
+  animation:zoomIn .5s ease;
+}
+
+@keyframes zoomIn{
+  from{transform:scale(.7);opacity:0}
+  to{transform:scale(1);opacity:1}
+}
+
+/* ================= SOCIAL ================= */
+.social{
+  position:fixed;
+  right:10px;
+  bottom:10px;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  z-index:50;
+}
+
 .icon{
-width:42px;height:42px;border-radius:50%;
-background:#111;display:flex;align-items:center;justify-content:center;
-font-size:20px;text-decoration:none;color:#fff;
-animation:pulse 2s infinite
+  width:44px;
+  height:44px;
+  border-radius:50%;
+  background:#111;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:20px;
+  color:#fff;
+  text-decoration:none;
+  animation:pulse 2s infinite;
 }
+
 @keyframes pulse{
-0%{box-shadow:0 0 0 0 #00ffcc55}
-100%{box-shadow:0 0 0 12px transparent}
+  0%{box-shadow:0 0 0 0 #00ffcc55}
+  100%{box-shadow:0 0 0 14px transparent}
 }
+
+/* ================= PARALLAX FEEL ================= */
+.parallax{
+  animation:float 6s infinite alternate ease-in-out;
+}
+
+@keyframes float{
+  from{transform:translateY(0)}
+  to{transform:translateY(-10px)}
+}
+
+/* ================= MOBILE FIX ================= */
+@media(min-width:700px){
+  .grid{grid-template-columns:repeat(4,1fr)}
+  .hero-text h1{font-size:56px}
+}
+
 </style>
 </head>
 
 <body>
 
-<!-- HERO VIDEO -->
+<!-- ================= HERO ================= -->
 <div class="hero">
-<video autoplay muted loop playsinline>
-<source src="videos/anime.mp4">
-</video>
-<div class="hero-text">
-<h1>Zyra Graphics</h1>
-<p>Designing Experiences</p>
-</div>
-</div>
-
-<!-- THUMBNAILS -->
-<div class="section">
-<h2>Thumbnails</h2>
-<div class="grid" id="thumb"></div>
+  <video autoplay muted loop playsinline>
+    <source src="videos/anime.mp4">
+  </video>
+  <div class="hero-text">
+    <h1>Zyra Graphics</h1>
+    <p>Designing Experiences</p>
+  </div>
 </div>
 
-<!-- POSTERS -->
-<div class="section">
-<h2>Posters</h2>
-<div class="grid" id="poster"></div>
+<!-- ================= THUMBNAILS ================= -->
+<div class="section fade">
+  <h2>Thumbnails</h2>
+  <div class="grid" id="thumb"></div>
 </div>
 
-<!-- ROSTER -->
-<div class="section">
-<h2>Roster Reveal</h2>
-<div class="grid" id="roster"></div>
+<!-- ================= POSTERS ================= -->
+<div class="section fade">
+  <h2>Posters</h2>
+  <div class="grid" id="poster"></div>
 </div>
 
-<!-- LOGOS -->
-<div class="section">
-<h2>Logos</h2>
-<div class="grid" id="logo"></div>
+<!-- ================= ROSTER ================= -->
+<div class="section fade">
+  <h2>Roster Reveal</h2>
+  <div class="grid" id="roster"></div>
 </div>
 
-<!-- Lightbox -->
+<!-- ================= LOGOS ================= -->
+<div class="section fade">
+  <h2>Logos</h2>
+  <div class="grid" id="logo"></div>
+</div>
+
+<!-- ================= LIGHTBOX ================= -->
 <div id="lightbox"><img></div>
 
-<!-- Social -->
+<!-- ================= SOCIAL ================= -->
 <div class="social">
-<a class="icon" href="https://instagram.com/xxxx">📸</a>
-<a class="icon" href="https://wa.me/917385009275">💬</a>
+  <a class="icon" href="https://instagram.com/xxxx">📸</a>
+  <a class="icon" href="https://wa.me/917385009275">💬</a>
 </div>
 
 <script>
+
+/* ================= IMAGE MAPPING ================= */
 const map=[
 {el:"thumb",start:1,end:5},
 {el:"poster",start:6,end:10},
@@ -117,23 +270,42 @@ const map=[
 ];
 
 map.forEach(sec=>{
-let box=document.getElementById(sec.el);
-for(let i=sec.start;i<=sec.end;i++){
-let img=document.createElement("img");
-img.src="images/"+i+".jpg";
-img.onclick=()=>openLight(img.src);
-box.appendChild(img);
-}
+  let box=document.getElementById(sec.el);
+  for(let i=sec.start;i<=sec.end;i++){
+    let wrap=document.createElement("div");
+    wrap.className="card parallax";
+
+    let img=document.createElement("img");
+    img.src="images/"+i+".jpg";
+
+    img.onclick=()=>openLight(img.src);
+    wrap.appendChild(img);
+    box.appendChild(wrap);
+  }
 });
 
+/* ================= LIGHTBOX ================= */
 function openLight(src){
-let l=document.getElementById("lightbox");
-l.style.display="flex";
-l.querySelector("img").src=src;
+  let l=document.getElementById("lightbox");
+  l.style.display="flex";
+  l.querySelector("img").src=src;
 }
+
 document.getElementById("lightbox").onclick=()=>{
-document.getElementById("lightbox").style.display="none";
+  document.getElementById("lightbox").style.display="none";
 };
+
+/* ================= SCROLL ANIMATION ================= */
+const fades=document.querySelectorAll(".fade");
+window.addEventListener("scroll",()=>{
+  fades.forEach(f=>{
+    let top=f.getBoundingClientRect().top;
+    if(top<window.innerHeight-60){
+      f.classList.add("show");
+    }
+  });
+});
+
 </script>
 
 </body>
