--- a/index.html
+++ b/index.html
@@ -5,307 +5,197 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyra Graphics</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{background:#000;color:#fff;font-family:Arial,Helvetica,sans-serif;overflow-x:hidden}
 
-/* ================= RESET ================= */
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+/* NAV */
+nav{
+position:fixed;top:0;left:0;width:100%;
+display:flex;justify-content:center;
+gap:20px;padding:10px;
+background:rgba(0,0,0,.6);
+backdrop-filter:blur(10px);
+z-index:99
+}
+nav button{
+background:none;border:1px solid #0ff;
+color:#0ff;padding:6px 14px;
+border-radius:20px;font-size:12px;
 }
 
-body{
-  background:#000;
-  color:#fff;
-  font-family:Arial,Helvetica,sans-serif;
-  overflow-x:hidden;
-}
-
-/* ================= GLOBAL ================= */
-img,video{
-  max-width:100%;
-  display:block;
-}
-
-h1,h2{
-  font-weight:600;
-  letter-spacing:2px;
-}
-
-/* ================= HERO ================= */
+/* HERO */
 .hero{
-  position:relative;
-  height:100vh;
-  width:100%;
-  overflow:hidden;
+height:100vh;position:relative;overflow:hidden
 }
-
 .hero video{
-  position:absolute;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  filter:brightness(.45) saturate(1.2);
-  animation:heroZoom 20s infinite alternate ease-in-out;
+width:100%;height:100%;
+object-fit:cover;filter:brightness(.45)
 }
-
-@keyframes heroZoom{
-  from{transform:scale(1)}
-  to{transform:scale(1.15)}
-}
-
 .hero::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:radial-gradient(circle at center, transparent 40%, #000 85%);
+content:"";position:absolute;inset:0;
+background:radial-gradient(circle,transparent,#000 80%)
 }
-
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:url("https://i.imgur.com/8Km9tLL.png");
-  opacity:.15;
-  mix-blend-mode:overlay;
-}
-
-/* ================= HERO TEXT ================= */
 .hero-text{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  text-align:center;
-  animation:textReveal 3s ease forwards;
+position:absolute;top:50%;left:50%;
+transform:translate(-50%,-50%);
+text-align:center
 }
-
 .hero-text h1{
-  font-size:42px;
-  margin-bottom:6px;
+font-family:'Orbitron';
+font-size:52px;letter-spacing:6px;
+animation:glow 3s infinite alternate
+}
+.hero-text p{opacity:.8;margin-top:10px}
+
+@keyframes glow{
+from{text-shadow:0 0 10px #0ff}
+to{text-shadow:0 0 25px #0ff}
 }
 
-.hero-text p{
-  opacity:.7;
-  font-size:14px;
+/* ABOUT */
+.about{
+padding:30px 20px;
+text-align:center;opacity:.9
 }
 
-@keyframes textReveal{
-  from{opacity:0;transform:translate(-50%,-40%)}
-  to{opacity:1;transform:translate(-50%,-50%)}
-}
+/* SECTIONS */
+.section{display:none;padding:20px}
+.section.active{display:block}
 
-/* ================= SECTIONS ================= */
-.section{
-  padding:18px 10px;
-}
-
-.section h2{
-  text-align:center;
-  margin-bottom:8px;
-  font-size:18px;
-  opacity:.85;
-}
-
-/* ================= GRID ================= */
 .grid{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:8px;
+display:grid;grid-template-columns:repeat(2,1fr);
+gap:8px
 }
-
 .card{
-  position:relative;
-  overflow:hidden;
-  border-radius:12px;
+overflow:hidden;border-radius:12px
 }
-
 .card img{
-  transition:1s;
-  filter:brightness(.9);
+width:100%;transition:1s
 }
-
 .card:hover img{
-  transform:scale(1.2);
-  filter:brightness(1.3);
+transform:scale(1.2);
+filter:brightness(1.3)
 }
 
-/* ================= SCROLL FADE ================= */
-.fade{
-  opacity:0;
-  transform:translateY(20px);
-  transition:1s;
-}
-
-.fade.show{
-  opacity:1;
-  transform:translateY(0);
-}
-
-/* ================= LIGHTBOX ================= */
+/* LIGHTBOX */
 #lightbox{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.96);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:99;
+position:fixed;inset:0;
+background:rgba(0,0,0,.95);
+display:none;align-items:center;justify-content:center
 }
-
 #lightbox img{
-  max-width:95%;
-  max-height:95%;
-  animation:zoomIn .5s ease;
+max-width:95%;max-height:95%
 }
 
-@keyframes zoomIn{
-  from{transform:scale(.7);opacity:0}
-  to{transform:scale(1);opacity:1}
-}
-
-/* ================= SOCIAL ================= */
+/* SOCIAL */
 .social{
-  position:fixed;
-  right:10px;
-  bottom:10px;
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-  z-index:50;
+position:fixed;right:10px;bottom:10px;
+display:flex;flex-direction:column;gap:10px
 }
-
 .icon{
-  width:44px;
-  height:44px;
-  border-radius:50%;
-  background:#111;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:20px;
-  color:#fff;
-  text-decoration:none;
-  animation:pulse 2s infinite;
+width:46px;height:46px;
+border-radius:50%;background:#0ff;
+display:flex;align-items:center;justify-content:center;
+font-size:22px;color:#000;
+animation:pulse 2s infinite
 }
-
 @keyframes pulse{
-  0%{box-shadow:0 0 0 0 #00ffcc55}
-  100%{box-shadow:0 0 0 14px transparent}
+0%{box-shadow:0 0 0 0 #0ff88}
+100%{box-shadow:0 0 0 15px transparent}
 }
 
-/* ================= PARALLAX FEEL ================= */
-.parallax{
-  animation:float 6s infinite alternate ease-in-out;
-}
-
-@keyframes float{
-  from{transform:translateY(0)}
-  to{transform:translateY(-10px)}
-}
-
-/* ================= MOBILE FIX ================= */
+/* DESKTOP */
 @media(min-width:700px){
-  .grid{grid-template-columns:repeat(4,1fr)}
-  .hero-text h1{font-size:56px}
+.grid{grid-template-columns:repeat(4,1fr)}
+.hero-text h1{font-size:72px}
 }
-
 </style>
 </head>
 
 <body>
 
-<!-- ================= HERO ================= -->
+<nav>
+<button onclick="show('thumb')">Thumbnails</button>
+<button onclick="show('poster')">Posters</button>
+<button onclick="show('roster')">Roster</button>
+<button onclick="show('logo')">Logos</button>
+</nav>
+
 <div class="hero">
-  <video autoplay muted loop playsinline>
-    <source src="videos/anime.mp4">
-  </video>
-  <div class="hero-text">
-    <h1>Zyra Graphics</h1>
-    <p>Designing Experiences</p>
-  </div>
+<video autoplay muted loop playsinline>
+<source src="videos/anime.mp4">
+</video>
+<div class="hero-text">
+<h1>Zyra Graphics</h1>
+<p>My name is Umer and I am a graphic designer & web developer</p>
+</div>
 </div>
 
-<!-- ================= THUMBNAILS ================= -->
-<div class="section fade">
-  <h2>Thumbnails</h2>
-  <div class="grid" id="thumb"></div>
+<div class="about">
+Professional creative studio focused on cinematic visuals,
+branding, motion and interactive web experiences.
 </div>
 
-<!-- ================= POSTERS ================= -->
-<div class="section fade">
-  <h2>Posters</h2>
-  <div class="grid" id="poster"></div>
+<div class="section active" id="thumb">
+<div class="grid"></div>
 </div>
 
-<!-- ================= ROSTER ================= -->
-<div class="section fade">
-  <h2>Roster Reveal</h2>
-  <div class="grid" id="roster"></div>
+<div class="section" id="poster">
+<div class="grid"></div>
 </div>
 
-<!-- ================= LOGOS ================= -->
-<div class="section fade">
-  <h2>Logos</h2>
-  <div class="grid" id="logo"></div>
+<div class="section" id="roster">
+<div class="grid"></div>
 </div>
 
-<!-- ================= LIGHTBOX ================= -->
+<div class="section" id="logo">
+<div class="grid"></div>
+</div>
+
 <div id="lightbox"><img></div>
 
-<!-- ================= SOCIAL ================= -->
 <div class="social">
-  <a class="icon" href="https://instagram.com/xxxx">📸</a>
-  <a class="icon" href="https://wa.me/917385009275">💬</a>
+<a class="icon" href="https://instagram.com/xxxx">📸</a>
+<a class="icon" href="https://wa.me/917385009275">💬</a>
 </div>
 
 <script>
-
-/* ================= IMAGE MAPPING ================= */
 const map=[
-{el:"thumb",start:1,end:5},
-{el:"poster",start:6,end:10},
-{el:"roster",start:11,end:15},
-{el:"logo",start:16,end:20}
+{id:"thumb",start:1,end:5},
+{id:"poster",start:6,end:10},
+{id:"roster",start:11,end:15},
+{id:"logo",start:16,end:20}
 ];
 
 map.forEach(sec=>{
-  let box=document.getElementById(sec.el);
-  for(let i=sec.start;i<=sec.end;i++){
-    let wrap=document.createElement("div");
-    wrap.className="card parallax";
-
-    let img=document.createElement("img");
-    img.src="images/"+i+".jpg";
-
-    img.onclick=()=>openLight(img.src);
-    wrap.appendChild(img);
-    box.appendChild(wrap);
-  }
+let box=document.querySelector("#"+sec.id+" .grid");
+for(let i=sec.start;i<=sec.end;i++){
+let d=document.createElement("div");
+d.className="card";
+let img=document.createElement("img");
+img.src="images/"+i+".jpg";
+img.onclick=()=>openLight(img.src);
+d.appendChild(img);
+box.appendChild(d);
+}
 });
 
-/* ================= LIGHTBOX ================= */
 function openLight(src){
-  let l=document.getElementById("lightbox");
-  l.style.display="flex";
-  l.querySelector("img").src=src;
+let l=document.getElementById("lightbox");
+l.style.display="flex";
+l.querySelector("img").src=src;
 }
-
 document.getElementById("lightbox").onclick=()=>{
-  document.getElementById("lightbox").style.display="none";
+document.getElementById("lightbox").style.display="none";
 };
 
-/* ================= SCROLL ANIMATION ================= */
-const fades=document.querySelectorAll(".fade");
-window.addEventListener("scroll",()=>{
-  fades.forEach(f=>{
-    let top=f.getBoundingClientRect().top;
-    if(top<window.innerHeight-60){
-      f.classList.add("show");
-    }
-  });
-});
-
+function show(id){
+document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+document.getElementById(id).classList.add("active");
+}
 </script>
 
 </body>
