--- a/index.html
+++ b/index.html
@@ -4,196 +4,230 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyra Graphics</title>
-
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:system-ui}
-html,body{background:#000;color:#fff;overflow-x:hidden;scroll-behavior:smooth}
-
-/* NAV */
-nav{
-position:fixed;top:15px;left:50%;transform:translateX(-50%);
-display:flex;gap:25px;padding:12px 28px;
-background:rgba(0,0,0,.4);
-backdrop-filter:blur(14px);
-border-radius:50px;
-z-index:1000
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  background:#000;
+  color:#fff;
+  font-family:Arial,Helvetica,sans-serif;
+  overflow-x:hidden;
+  scroll-behavior:smooth;
 }
-nav a{color:#0ff;text-decoration:none;font-size:14px}
-
-/* SECTIONS */
-section{min-height:100svh;display:flex;align-items:center;justify-content:center;position:relative}
 
 /* HERO */
+.hero{
+  height:100vh;
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  overflow:hidden;
+}
 .hero video{
-position:absolute;width:100%;height:100%;
-object-fit:cover;z-index:-2
+  position:absolute;
+  top:0;left:0;
+  width:100%;height:100%;
+  object-fit:cover;
+  z-index:-2;
 }
 .hero::after{
-content:"";position:absolute;width:100%;height:100%;
-background:linear-gradient(to bottom,rgba(0,0,0,.8),#000)
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+  z-index:-1;
 }
-.hero-content{text-align:center}
-.hero-content h1{
-font-size:clamp(3rem,10vw,6rem);
-letter-spacing:4px
+.hero h1{
+  font-size:3rem;
+  animation:fadeUp 1s forwards;
 }
-.hero-content p{margin-top:10px;color:#0ff}
-
-/* PORTFOLIO */
-.portfolio{flex-direction:column;padding:80px 15px}
-.posters{
-display:grid;grid-template-columns:repeat(2,1fr);
-gap:14px;max-width:1000px;width:100%
+.hero p{
+  margin-top:10px;
+  color:#ccc;
+  animation:fadeUp 1.5s forwards;
 }
-.poster{
-height:160px;
-background:#111;border:1px solid #0ff;
-display:flex;align-items:center;justify-content:center;
-cursor:pointer;transition:.3s
+.buttons{
+  margin-top:25px;
+  display:flex;
+  gap:10px;
 }
-.poster:hover{transform:scale(1.05);box-shadow:0 0 20px cyan}
+.buttons button{
+  background:transparent;
+  color:#fff;
+  border:2px solid #fff;
+  padding:10px 18px;
+  cursor:pointer;
+  transition:.3s;
+}
+.buttons button:hover{
+  background:#fff;
+  color:#000;
+}
 
 /* GALLERY */
 .gallery{
-position:fixed;inset:0;background:#000;
-display:none;align-items:center;justify-content:center;
-z-index:2000
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+  gap:10px;
+  padding:20px;
 }
-.gallery img{max-width:90%;max-height:80vh}
-.gallery .close{
-position:absolute;top:20px;right:20px;
-padding:10px;border:1px solid cyan;color:cyan
+.gallery img{
+  width:100%;
+  border-radius:6px;
+  transition:.3s;
 }
-.arrow{
-position:absolute;top:50%;
-font-size:40px;color:cyan;cursor:pointer
+.gallery img:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 15px #fff;
 }
-.left{left:20px}
-.right{right:20px}
 
-/* ANIME */
-.anime video{
-width:90%;max-width:700px;
-border:2px solid cyan
+/* LIGHTBOX */
+#lightbox{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.95);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:999;
+}
+#lightbox img{
+  max-width:90%;
+  max-height:90%;
+}
+#lightbox span{
+  position:absolute;
+  top:20px;right:30px;
+  font-size:30px;
+  cursor:pointer;
 }
 
 /* ABOUT */
-.about{text-align:center;padding:60px}
-.about p{max-width:600px;line-height:1.6}
-
-/* CONTACT */
-.contact{
-position:fixed;bottom:20px;right:20px;
-display:flex;flex-direction:column;gap:12px;z-index:3000
-}
-.contact img{
-width:48px;height:48px;
-filter:drop-shadow(0 0 12px cyan);
-animation:pulse 2s infinite
-}
-@keyframes pulse{
-0%{transform:scale(1)}
-50%{transform:scale(1.15)}
-100%{transform:scale(1)}
+.about{
+  padding:40px 20px;
+  text-align:center;
+  color:#ccc;
 }
 
-/* DESKTOP */
-@media(min-width:768px){
-.posters{grid-template-columns:repeat(5,1fr)}
-.poster{height:220px}
+/* SOCIAL FLOAT */
+.social{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  z-index:999;
+}
+.social a{
+  width:55px;
+  height:55px;
+  border-radius:50%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#111;
+  border:2px solid #fff;
+  transition:.3s;
+}
+.social a:hover{
+  transform:scale(1.2);
+  box-shadow:0 0 20px #fff;
+}
+.social svg{
+  width:28px;
+  height:28px;
+  fill:white;
+}
+
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
 }
 </style>
 </head>
-
 <body>
 
-<nav>
-<a href="#home">Home</a>
-<a href="#portfolio">Portfolio</a>
-<a href="#anime">Anime</a>
-<a href="#about">About</a>
-<a href="#contact">Contact</a>
-</nav>
+<!-- HERO -->
+<div class="hero">
+  <video autoplay muted loop playsinline>
+    <source src="videos/anime.mp4" type="video/mp4">
+  </video>
+  <h1>Zyra Graphics</h1>
+  <p>Hi, I'm Umer — Graphic Designer & Web Developer</p>
 
-<section class="hero" id="home">
-<video autoplay muted loop playsinline preload="auto">
-  <source src="video/hero.mp4" type="video/mp4">
-</video>
-<div class="hero-content">
-<h1>Zyra Graphics</h1>
-<p>Graphic Designer & Motion Artist</p>
-</div>
-</section>
-
-<section class="portfolio" id="portfolio">
-<h2>Portfolio</h2>
-<br>
-<div class="posters">
-<div class="poster" onclick="openGallery(1)">Project 1</div>
-<div class="poster" onclick="openGallery(6)">Project 2</div>
-<div class="poster" onclick="openGallery(11)">Project 3</div>
-<div class="poster" onclick="openGallery(16)">Project 4</div>
-<div class="poster" onclick="openGallery(1)">Project 5</div>
-</div>
-</section>
-
-<div class="gallery" id="gallery">
-<span class="arrow left" onclick="prevImg()">&#10094;</span>
-<img id="galleryImg">
-<span class="arrow right" onclick="nextImg()">&#10095;</span>
-<div class="close" onclick="closeGallery()">Close</div>
+  <div class="buttons">
+    <button onclick="showSection('thumbnails')">Thumbnails</button>
+    <button onclick="showSection('roaster')">Roaster Reveal</button>
+    <button onclick="showSection('posters')">Posters</button>
+    <button onclick="showSection('logos')">Logos</button>
+  </div>
 </div>
 
-<section class="anime" id="anime">
-<video autoplay muted loop playsinline preload="auto">
-  <source src="video/hero.mp4" type="video/mp4">
-</video>
-</section>
+<!-- GALLERY -->
+<div class="gallery" id="gallery"></div>
 
-<section class="about" id="about">
-<h2>About Zyra</h2>
-<br>
-<p>
-Zyra Graphics is a premium creative studio focused on modern design,
-anime-inspired motion visuals and cinematic digital experiences.
-We blend storytelling with high-end visuals.
-</p>
-</section>
+<!-- LIGHTBOX -->
+<div id="lightbox" onclick="closeLB()">
+  <span>&times;</span>
+  <img id="lbImg">
+</div>
 
-<div class="contact" id="contact">
-<a href="#"><img src="icons/whatsapp.svg"></a>
-<a href="#"><img src="icons/instagram.svg"></a>
+<!-- ABOUT -->
+<div class="about">
+  <h2>About Me</h2>
+  <p>I create premium visuals for brands — posters, logos, thumbnails & web designs.</p>
+</div>
+
+<!-- SOCIAL ICONS (PURE SVG) -->
+<div class="social">
+  <a href="https://wa.me/7385009275" target="_blank">
+    <!-- WhatsApp SVG -->
+    <svg viewBox="0 0 448 512">
+      <path d="M380.9 97.1C339-3.9 227.5-33.1 136.5 8.8 55.6 45.5 13.8 130.6 32.2 217.3L0 480l271.4-69.5c69.7 12.6 138.8-17.7 180.6-75.7 43.4-59.5 48.9-138.3 14.1-198.7z"/>
+    </svg>
+  </a>
+  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank">
+    <!-- Instagram SVG -->
+    <svg viewBox="0 0 448 512">
+      <path d="M224 202.7A53.3 53.3 0 1 0 277.3 256 53.38 53.38 0 0 0 224 202.7z"/>
+      <path d="M448 80v352a80 80 0 0 1-80 80H80a80 80 0 0 1-80-80V80a80 80 0 0 1 80-80h288a80 80 0 0 1 80 80zM224 338a82 82 0 1 1 82-82 82.09 82.09 0 0 1-82 82zm85.4-148.1a19.4 19.4 0 1 1 19.4-19.4 19.42 19.42 0 0 1-19.4 19.4z"/>
+    </svg>
+  </a>
 </div>
 
 <script>
-let current=1;
+const gallery = document.getElementById("gallery");
+const lb = document.getElementById("lightbox");
+const lbImg = document.getElementById("lbImg");
 
-function openGallery(start){
-current=start;
-gallery.style.display="flex";
-galleryImg.src="images/"+current+".jpg";
-}
-function closeGallery(){
-gallery.style.display="none";
-}
-function nextImg(){
-current++; if(current>20)current=1;
-galleryImg.src="images/"+current+".jpg";
-}
-function prevImg(){
-current--; if(current<1)current=20;
-galleryImg.src="images/"+current+".jpg";
+const sections = {
+  thumbnails:[1,2,3,4,5],
+  roaster:[6,7,8,9,10],
+  posters:[11,12,13,14,15],
+  logos:[16,17,18,19,20] // FIXED: logos now only images
+};
+
+function showSection(sec){
+  gallery.innerHTML="";
+  sections[sec].forEach(i=>{
+    let img=document.createElement("img");
+    img.src=`images/${i}.jpg`;
+    img.onclick=()=>openLB(img.src);
+    gallery.appendChild(img);
+  });
+  window.scrollTo({top:gallery.offsetTop,behavior:"smooth"});
 }
 
-/* mobile swipe */
-let startX=0;
-gallery.addEventListener("touchstart",e=>startX=e.touches[0].clientX);
-gallery.addEventListener("touchend",e=>{
-let diff=e.changedTouches[0].clientX-startX;
-if(diff>50)prevImg();
-if(diff<-50)nextImg();
-});
+function openLB(src){
+  lb.style.display="flex";
+  lbImg.src=src;
+}
+function closeLB(){
+  lb.style.display="none";
+}
 </script>
-
 </body>
-</html>
+  </html>
