--- a/index.html
+++ b/index.html
@@ -422,10 +422,10 @@ body{
 <!-- Social Icons -->
 <div class="social">
   <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
-    <img src="icons/whatsapp.svg" alt="WhatsApp">
+    <img src="icons/whatsapp.png" alt="WhatsApp">
   </a>
   <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank" class="instagram">
-    <img src="icons/instagram.svg" alt="Instagram">
+    <img src="icons/instagram.png" alt="Instagram">
   </a>
 </div>
 
