--- a/index.html
+++ b/index.html
@@ -68,11 +68,29 @@ body{
   animation:heroText 2s ease forwards;
 }
 
-/* Animated SVG Logo */
-#hero-logo{
-  width:120px; height:120px;
+/* Hero Logo Image */
+#hero-logo {
+  width:120px;              /* logo size */
+  height:120px;
   margin-bottom:15px;
-  animation:rotateGlow 4s infinite alternate;
+  border-radius:50%;        /* circle shape */
+  overflow:hidden;          /* ensures image stays inside circle */
+  animation:rotateGlow 4s infinite linear; /* smooth rotation */
+  box-shadow: 0 0 20px #fff; /* initial glow effect */
+}
+
+#hero-logo img {
+  width:100%;
+  height:100%;
+  object-fit:cover;         /* image fills circle properly */
+  border-radius:50%;        /* ensures image stays circular */
+}
+
+/* Glow + rotation animation */
+@keyframes rotateGlow {
+  0% { transform:rotate(0deg); box-shadow:0 0 10px #fff; }
+  50% { transform:rotate(180deg); box-shadow:0 0 25px #0ff; }
+  100% { transform:rotate(360deg); box-shadow:0 0 10px #fff; }
 }
 
 /* Section Buttons */
@@ -422,10 +440,10 @@ body{
 <!-- Social Icons -->
 <div class="social">
   <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
-    <img src="icons/whatsapp.png" alt="WhatsApp">
+    <img src="images/whatsapp.png" alt="WhatsApp">
   </a>
   <a href="https://instagram.com/zyragraphics.in" target="_blank" class="instagram">
-    <img src="icons/instagram.png" alt="Instagram">
+    <img src="images/instagram.png" alt="Instagram">
   </a>
 </div>
 
