--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ body{
   <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
     <img src="images/whatsapp.png" alt="WhatsApp">
   </a>
-  <a href="https://instagram.com/zyragraphics.in" target="_blank" class="instagram">
+  <a href="https://instagram.com/@zyragraphics.in" target="_blank" class="instagram">
     <img src="images/instagram.png" alt="Instagram">
   </a>
 </div>
